View com delete

--- a/Demo.MVC/Views/Candidato/Delete.cshtml
+++ b/Demo.MVC/Views/Candidato/Delete.cshtml
@@ -1,13 +1,11 @@
 ﻿@model Demo.Domain.Entities.Candidato
-
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 
-<form asp-action="Delete">
-    <input type="submit" value="Delete" class="btn btn-danger" />
+<form asp-action="Remove">
+    <input type="submit" value="Delete" class="btn btn-danger" /> |
+    <a asp-action="Index">Back to List</a>
 </form>
